# poetry-test-GA

./: Readme.md  main.py  pyproject.toml
.github/workflows/: build-and-test.yml
tests/: test_a.py
